--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "eslint-plugin-vue": "^8.0.3",
     "less": "^4.0.0",
     "less-loader": "^8.0.0",
-    "typescript": "~4.5.5",
+    "typescript": "^4.7.0",
     "vite": "^3.0.8",
     "vite-plugin-vuetify": "^1.0.0-alpha.12",
     "vue-cli-plugin-vuetify": "~2.5.8"
