--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,11 +18,12 @@ jobs:
         with:
           node-version: '16' # ここはプロジェクトに合わせて適宜変更してください
 
-      - name: Install dependencies
-        run: npm install --legacy-peer-deps
-
-      - name: Build
-        run: npm run build
+      - name: Build and Deploy
+        run: |
+          npm install --legacy-peer-deps
+          npm run build
+        env:
+          NODE_ENV: production
 
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@4.1.4
