--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,10 +18,11 @@ jobs:
         with:
           node-version: '16' # ここはプロジェクトに合わせて適宜変更してください
 
+      - name: Install dependencies
+        run: npm install --legacy-peer-deps
+
       - name: Build and Deploy
-        run: |
-          npm install --legacy-peer-deps
-          npm run build
+        run: npm run build
         env:
           NODE_ENV: production
 
